# SPDX-License-Identifier: AGPL-3.0-or-later

# ==============================================================================
[build-system]
# ==============================================================================

requires = ["hatchling"]
build-backend = "hatchling.build"

# ==============================================================================
[project]
# ==============================================================================

name = "linuxdoc"
dynamic = ["version"]

description = "Sphinx-doc extensions & tools to extract documentation from C/C++ source file comments."
readme = "README.rst"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["sphinx extension", "doc", "source code comments", "kernel-doc", "linux"]
authors = [
  { name = "Markus Heiser", email = "markus.heiser@darmarit.de" },
]
maintainers = [
  {name = "Markus Heiser", email = "markus.heiser@darmarit.de" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = [
  "fspath",
  "setuptools",
  "docutils",
  "sphinx",
]

[project.urls]
Documentation = "https://return42.github.io/linuxdoc"
Issues = "https://github.com/return42/linuxdoc/issues"
Source = "https://github.com/return42/linuxdoc"

[project.scripts]
"linuxdoc.rest" = "linuxdoc.rest:main"
"linuxdoc.autodoc" = "linuxdoc.autodoc:main"
"linuxdoc.lintdoc" = "linuxdoc.lint:main"
"linuxdoc.grepdoc" = "linuxdoc.grepdoc:main"


# ==============================================================================
[tool.hatch]
# ==============================================================================

[tool.hatch.version]
path = "linuxdoc/__pkginfo__.py"

# hatch env: default
# ------------------

[tool.hatch.envs.default]

dependencies = [
  "argparse-manpage",
  "basedpyright==1.27.*",
  "black==25.1.*",
  "furo",
  "isort==6.0.*",
  "pylint",
  "sphinx-autobuild",
  "sphinx-issues",
  "sphinx-jinja",
  "sphinx-tabs",
  "sphinxcontrib-programoutput",
  "tox",
  "twine",
]

[tool.hatch.envs.default.scripts]

prj = "./prj {args:--help}"

fix = [
  "isort {args:./linuxdoc ./docs/conf.py ./tests}",
  "black {args:./linuxdoc ./docs/conf.py ./tests}",
]

isort-check = "isort --diff {args:./linuxdoc ./tests}"
black-check = "black --check --diff {args:./linuxdoc ./tests}"
pylint-check = "pylint --output-format=parseable {args:./linuxdoc ./tests}"
basedpyright-check = "basedpyright {args:./linuxdoc ./tests}"

check = [
  "isort-check",
  "black-check",
  "pylint-check",
  "basedpyright-check",
  "packaging",
]

# ===================
[tool.hatch.envs.dev]
# ===================

description = """Create a project-specific (local) develop environment.
IDE & LSP preferably use a project-local virtual env in the ./.venv folder.

The environment in ./.venv is identical to the 'default' environment, \
but limited to the minimum Python version that the Python project still \
supports, see [project].requires-python (3.10)."""

path = ".venv"
python = "3.10"  # minimal py version, see [project].requires-python

# ===================
[tool.hatch.envs.doc]
# ===================
template = "doc"
python = "3.14"

description = """Build & deploy project's documentation."""

dependencies = [
  # doc ..
  "furo",
  "sphinx",
  "sphinx-autobuild",
  # "sphinx-issues",
  # "sphinx-jinja",
  "sphinx-tabs",
  "sphinxcontrib-programoutput",
  "sphinx-notfound-page",
  "sphinx-copybutton",
]

[tool.hatch.envs.doc.scripts]

# HINT:
#
#   The leading minus sign `-` in the scripts for generating the online
#   documentation deliberately ignores the errors that are forced in the
#   documentation, for example, for the symbol `no_longer_exists`
#   (docs/linuxdoc-howto/kernel-doc-directive.rst), in order to demonstrate an
#   error case.
#
#   In the online documentation, there is also an example for Linux man pages
#   (user_function.2); the man file dist/docs/man/user_function.2.gz must be
#   created for it before the online documentation is generated::
#
#        hatch run doc:man
#        hatch run doc:live


live = [
  """
    - sphinx-autobuild \
    --watch docs/ --watch linuxdoc \
    --open-browser --delay 2 \
    -b html --fresh-env \
    docs build/docs/live \
    """,
]

html = [
  """
    - sphinx-build \
    -W -b html --write-all --fresh-env \
    --doctree-dir build/docs/html/.doctrees \
    docs dist/docs/html \
    """,
]

man = [
  """
    - sphinx-build \
    -W -b kernel-doc-man --write-all --fresh-env \
    --doctree-dir build/docs/man/.doctrees \
    docs dist/docs/man \
    """,
    """find dist/docs/man -name '*.[0-9]' -exec gzip -nf {{}} +""",
]

coverage = [
  """
    sphinx-build \
    -b coverage --fresh-env  \
    --doctree-dir build/doc/html/.doctrees \
    docs build/docs/html
    cat build/docs/html/python.txt
    """,
]


# ==============================================================================
[tool.isort]
# ==============================================================================

skip_gitignore = true
skip = [".venv"]

profile = "black"
atomic = true
use_parentheses = true
include_trailing_comma = true
